# HOMiEs

./: CMakeLists.txt  MAC cmake  TEMP  main.cpp  minesweeper cmake  ripquicksort  temp  window cmake
Home_Finder/: CMakeLists.txt  Tester.h  main.cpp
